--- a/assents/projeto.css
+++ b/assents/projeto.css
@@ -1,7 +1,10 @@
-*
+body
 {
     margin: 0;
     padding: 0;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #000;
 }
 
 .links {
